<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.signup.SingUpActivity">

    <TextView
        android:id="@+id/tvTitleSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/singup_title_margin_top"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/tvTitleSingUp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="357dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSingUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/tilUser">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="0dp"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieConfirmPassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/tieConfirmPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieEmail" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSingUp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="@string/btSingUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
        app:layout_constraintStart_toStartOf="@+id/gdlBegin"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:layout_constraintVertical_bias="0.65999997" />

</androidx.constraintlayout.widget.ConstraintLayout>